@@ -31,14 +31,56 @@ NULL
 #'
 #' @export
 #' @inheritParams discrete_scale
-#' @param minor_breaks Used with date or datetime scales. Either \code{NULL} for
-#'   no minor breaks, \code{waiver()} for the default breaks (one minor break
-#'   between each major break), a numeric vector of positions, or a function
-#'   that given the limits returns a vector of minor breaks.
-#' @param limits A numeric vector of length two describing the scale limits.
+#' @param name The name of the scale. Used as axis or legend title. If
+#'   \code{NULL}, the default, the name of the scale is taken from the first
+#'   mapping used for that aesthetic.
+#' @param breaks One of: \itemize{
+#'   \item \code{NULL} for no breaks
+#'   \item \code{waiver()} for the default breaks computed by the
+#'     transformation object
+#'   \item A numeric vector of positions
+#'   \item A function that takes the limits as input and returns breaks
+#'     as output
+#' }
+#' @param minor_breaks One of: \itemize{
+#'   \item \code{NULL} for no minor breaks
+#'   \item \code{waiver()} for the default breaks (one minor break between
+#'     each major break)
+#'   \item A numeric vector of positions
+#'   \item A function that given the limits returns a vector of minor breaks.
+#' }
+#' @param labels One of: \itemize{
+#'   \item \code{NULL} for no labels
+#'   \item \code{waiver()} for the default labels computed by the
+#'     transformation object
+#'   \item A character vector giving labels (must be same length as \code{breaks})
+#'   \item A function that takes the breaks as input and returns labels
+#'     as output
+#' }
+#' @param limits A numeric vector of length two providing limits of the scale.
+#'   Use \code{NA} to refer to the existing minimum or maximum.
 #' @param rescaler  Used by diverging and n colour gradients
 #'   (i.e. \code{\link{scale_colour_gradient2}}, \code{\link{scale_colour_gradientn}}).
-#' @param oob What to do with values outside scale limits (out of bounds)?
+#'   A function used to scale the input values to the range [0, 1].
+#' @param oob Function that handles limits outside of the scale limits
+#'   (out of bounds). The default replaces out of bounds values with NA.
+#' @param na.value Missing values will be replaced with this value.
+#' @param trans Either the name of a transformation object, or the
+#'   object itself. Built-in transformations include "asn", "atanh",
+#'   "boxcox", "exp", "identity", "log", "log10", "log1p", "log2",
+#'   "logit", "probability", "probit", "reciprocal", "reverse" and "sqrt".
+#'
+#'   A transformation object bundles together a transform, it's inverse,
+#'   and methods for generating breaks and labels. Transformation objects
+#'   are defined in the scales package, and are called \code{name_trans}, e.g.
+#'   \code{\link[scales]{boxcox_trans}}. You can create your own
+#'   transformation with \code{\link[scales]{trans_new}}.
+#' @param expand A numeric vector of length two giving multiplicative and
+#'   additive expansion constants. These constants ensure that the data is
+#'   placed some distance away from the axes. The defaults are
+#'   \code{c(0.05, 0)} for continuous variables, and \code{c(0, 0.6)} for
+#'   discrete variables.
+#' @param guide Name of guide object, or object itself.
 #' @keywords internal
 continuous_scale <- function(aesthetics, scale_name, palette, name = NULL, breaks = waiver(), minor_breaks = waiver(), labels = waiver(), limits = NULL, rescaler = rescale, oob = censor, expand = waiver(), na.value = NA_real_, trans = "identity", guide="legend") {
 
