@@ -18,48 +18,66 @@ continuous_scale(aesthetics, scale_name, palette, name = NULL,
 argument (the number of levels in the scale) returns the values that
 they should take}
 
-\item{name}{the name of the scale - used as the axis label or the legend
-title}
+\item{name}{The name of the scale. Used as axis or legend title. If
+\code{NULL}, the default, the name of the scale is taken from the first
+mapping used for that aesthetic.}
 
-\item{breaks}{control the breaks in the guide.  There are four possible
-types of input:
-\itemize{
-  \item \code{NULL}: don't display any breaks
-  \item a character vector giving the breaks as they should appear on the
-   axis or in the legend.
-  \item \code{waiver()} to use the default break computation.
-  \item a function, that when called with a single argument, a character
-    vector giving the limits of the scale, returns a character vector
-    specifying which breaks to display.
-}
-This parameter does not affect in any way how the data is scaled - it
-only affects the appearance of the legend.}
+\item{breaks}{One of: \itemize{
+  \item \code{NULL} for no breaks
+  \item \code{waiver()} for the default breaks computed by the
+    transformation object
+  \item A numeric vector of positions
+  \item A function that takes the limits as input and returns breaks
+    as output
+}}
 
-\item{minor_breaks}{Used with date or datetime scales. Either \code{NULL} for
-no minor breaks, \code{waiver()} for the default breaks (one minor break
-between each major break), a numeric vector of positions, or a function
-that given the limits returns a vector of minor breaks.}
+\item{minor_breaks}{One of: \itemize{
+  \item \code{NULL} for no minor breaks
+  \item \code{waiver()} for the default breaks (one minor break between
+    each major break)
+  \item A numeric vector of positions
+  \item A function that given the limits returns a vector of minor breaks.
+}}
 
-\item{labels}{\code{NULL} for no labels, \code{waiver()} for default
-labels (labels the same as breaks), a character vector the same length
-as breaks, or a named character vector whose names are used to match
-replacement the labels for matching breaks.}
+\item{labels}{One of: \itemize{
+  \item \code{NULL} for no labels
+  \item \code{waiver()} for the default labels computed by the
+    transformation object
+  \item A character vector giving labels (must be same length as \code{breaks})
+  \item A function that takes the breaks as input and returns labels
+    as output
+}}
 
-\item{limits}{A numeric vector of length two describing the scale limits.}
+\item{limits}{A numeric vector of length two providing limits of the scale.
+Use \code{NA} to refer to the existing minimum or maximum.}
 
 \item{rescaler}{Used by diverging and n colour gradients
-(i.e. \code{\link{scale_colour_gradient2}}, \code{\link{scale_colour_gradientn}}).}
+(i.e. \code{\link{scale_colour_gradient2}}, \code{\link{scale_colour_gradientn}}).
+A function used to scale the input values to the range [0, 1].}
 
-\item{oob}{What to do with values outside scale limits (out of bounds)?}
+\item{oob}{Function that handles limits outside of the scale limits
+(out of bounds). The default replaces out of bounds values with NA.}
 
-\item{expand}{a numeric vector of length two, giving a multiplicative and
-additive constant used to expand the range of the scales so that there
-is a small gap between the data and the axes.}
+\item{expand}{A numeric vector of length two giving multiplicative and
+additive expansion constants. These constants ensure that the data is
+placed some distance away from the axes. The defaults are
+\code{c(0.05, 0)} for continuous variables, and \code{c(0, 0.6)} for
+discrete variables.}
 
-\item{na.value}{how should missing values be displayed?}
+\item{na.value}{Missing values will be replaced with this value.}
 
-\item{guide}{the name of, or actual function, used to create the
-guide.}
+\item{trans}{Either the name of a transformation object, or the
+  object itself. Built-in transformations include "asn", "atanh",
+  "boxcox", "exp", "identity", "log", "log10", "log1p", "log2",
+  "logit", "probability", "probit", "reciprocal", "reverse" and "sqrt".
+
+  A transformation object bundles together a transform, it's inverse,
+  and methods for generating breaks and labels. Transformation objects
+  are defined in the scales package, and are called \code{name_trans}, e.g.
+  \code{\link[scales]{boxcox_trans}}. You can create your own
+  transformation with \code{\link[scales]{trans_new}}.}
+
+\item{guide}{Name of guide object, or object itself.}
 }
 \description{
 Continuous scale constructor.
