@@ -11,9 +11,15 @@
 \alias{scale_y_sqrt}
 \title{Continuous position scales (x & y).}
 \usage{
-scale_x_continuous(..., expand = waiver())
+scale_x_continuous(name = NULL, breaks = waiver(),
+  minor_breaks = waiver(), labels = waiver(), limits = NULL,
+  expand = waiver(), oob = censor, na.value = NA_real_,
+  trans = "identity")
 
-scale_y_continuous(..., expand = waiver())
+scale_y_continuous(name = NULL, breaks = waiver(),
+  minor_breaks = waiver(), labels = waiver(), limits = NULL,
+  expand = waiver(), oob = censor, na.value = NA_real_,
+  trans = "identity")
 
 scale_x_log10(...)
 
@@ -28,16 +34,67 @@ scale_x_sqrt(...)
 scale_y_sqrt(...)
 }
 \arguments{
-\item{...}{common continuous scale parameters: \code{name}, \code{breaks},
-\code{labels}, \code{na.value}, \code{limits} and \code{trans}.  See
-\code{\link{continuous_scale}} for more details}
+\item{name}{The name of the scale. Used as axis or legend title. If
+\code{NULL}, the default, the name of the scale is taken from the first
+mapping used for that aesthetic.}
 
-\item{expand}{a numeric vector of length two giving multiplicative and
+\item{breaks}{One of: \itemize{
+  \item \code{NULL} for no breaks
+  \item \code{waiver()} for the default breaks computed by the
+    transformation object
+  \item A numeric vector of positions
+  \item A function that takes the limits as input and returns breaks
+    as output
+}}
+
+\item{minor_breaks}{One of: \itemize{
+  \item \code{NULL} for no minor breaks
+  \item \code{waiver()} for the default breaks (one minor break between
+    each major break)
+  \item A numeric vector of positions
+  \item A function that given the limits returns a vector of minor breaks.
+}}
+
+\item{labels}{One of: \itemize{
+  \item \code{NULL} for no labels
+  \item \code{waiver()} for the default labels computed by the
+    transformation object
+  \item A character vector giving labels (must be same length as \code{breaks})
+  \item A function that takes the breaks as input and returns labels
+    as output
+}}
+
+\item{limits}{A numeric vector of length two providing limits of the scale.
+Use \code{NA} to refer to the existing minimum or maximum.}
+
+\item{expand}{A numeric vector of length two giving multiplicative and
 additive expansion constants. These constants ensure that the data is
-placed some distance away from the axes.}
+placed some distance away from the axes. The defaults are
+\code{c(0.05, 0)} for continuous variables, and \code{c(0, 0.6)} for
+discrete variables.}
+
+\item{oob}{Function that handles limits outside of the scale limits
+(out of bounds). The default replaces out of bounds values with NA.}
+
+\item{na.value}{Missing values will be replaced with this value.}
+
+\item{trans}{Either the name of a transformation object, or the
+  object itself. Built-in transformations include "asn", "atanh",
+  "boxcox", "exp", "identity", "log", "log10", "log1p", "log2",
+  "logit", "probability", "probit", "reciprocal", "reverse" and "sqrt".
+
+  A transformation object bundles together a transform, it's inverse,
+  and methods for generating breaks and labels. Transformation objects
+  are defined in the scales package, and are called \code{name_trans}, e.g.
+  \code{\link[scales]{boxcox_trans}}. You can create your own
+  transformation with \code{\link[scales]{trans_new}}.}
+
+\item{...}{Other arguments passed on to \code{scale_(x|y)_continuous}}
 }
 \description{
-Continuous position scales (x & y).
+\code{scale_x_continous} and \code{scale_y_continous} are the key functions.
+The others, \code{scale_x_log10}, \code{scale_y_sqrt} etc, are aliases
+that set the \code{trans} argument to commonly used transformations.
 }
 \examples{
 \donttest{
