@@ -41,7 +41,9 @@ ggplot2 1.0.1
   don't need to do `library(scales)` or `scales::alpha()` to access that
   handy function (#1107).
 
-* Improved documentation for `aes()` and many geoms.
+* Improved documentation for `aes()` and many geoms and scales. I've tried
+  to reduce the use of `...` so that you can see all the documentation in one
+  place rather than having to navigate through multiple pages.
 
 * Fixes to pass `R CMD check --run-donttest` in R-devel.
 
